@@ -1,3 +1,13 @@
+2010-09-04 Markus Malkusch <markus@malkusch.de>
+
+    * classes/AbstractAutoloader.php (AbstractAutoloader::autoload()):
+    AbstractAutoloader::autoload() checks also interface_exists() to skip
+    its work.
+
+    * classes/AbstractAutoloader.php (AbstractAutoloader::autoload()):
+    Exceptions are never thrown as this breaks compatibility with
+    functions like class_exists().
+
 2010-05-27 Markus Malkusch <markus@malkusch.de>
 
     * classes/autoloadAPI/AutoloadAPI.php (AutoloadAPI):
